[project]
name = "scopedstats"
version = "0.1.0"
description = "A Python library for scoped statistics collection using context managers"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.4.1"]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "ruff>=0.12.10",
]
